// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toast snapshot tests renders hidden toast after auto-dismiss 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-6 left-1/2 -translate-x-1/2 z-50 px-4 py-2.5 rounded-xl text-sm font-medium text-white border shadow-xl transition-all duration-300 opacity-0 translate-y-2 bg-slate-800 border-white/10"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    This toast will be hidden
  </div>
</div>
`;

exports[`Toast snapshot tests renders loading-style toast (using info type) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-6 left-1/2 -translate-x-1/2 z-50 px-4 py-2.5 rounded-xl text-sm font-medium text-white border shadow-xl transition-all duration-300 opacity-100 translate-y-0 bg-slate-800 border-white/10"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    Loading...
  </div>
</div>
`;

exports[`Toast snapshot tests renders visible error toast 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-6 left-1/2 -translate-x-1/2 z-50 px-4 py-2.5 rounded-xl text-sm font-medium text-white border shadow-xl transition-all duration-300 opacity-100 translate-y-0 bg-red-600 border-red-500"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      class="w-4 h-4"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    An error occurred
  </div>
</div>
`;

exports[`Toast snapshot tests renders visible info toast 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-6 left-1/2 -translate-x-1/2 z-50 px-4 py-2.5 rounded-xl text-sm font-medium text-white border shadow-xl transition-all duration-300 opacity-100 translate-y-0 bg-slate-800 border-white/10"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    This is an info toast
  </div>
</div>
`;

exports[`Toast snapshot tests renders visible success toast 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-6 left-1/2 -translate-x-1/2 z-50 px-4 py-2.5 rounded-xl text-sm font-medium text-white border shadow-xl transition-all duration-300 opacity-100 translate-y-0 bg-emerald-600 border-emerald-500"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      class="w-4 h-4"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13l4 4L19 7"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Operation completed successfully
  </div>
</div>
`;
